fixes in home page, hidden overflows

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,19 @@ body {
   text-overflow: ellipsis;
 }
 
+/* home page */
+
+.main-text {
+  width: 50% !important;
+}
+
+@media screen and (max-width: 480px) {
+  .main-text {
+    width: 100% !important;
+    margin-top: 3em !important;
+  }
+}
+
 /* go up button */
 
 .go-up-btn {
@@ -119,6 +132,7 @@ body {
   position: fixed;
   top: 90px;
   background-color: #009688;
+  overflow-x: hidden;
 }
 
 .heartbeat {
@@ -165,6 +179,7 @@ body {
 
 .header-nav {
   z-index: 1;
+  overflow-x: hidden;
 }
 /* register form */
 
@@ -448,6 +463,9 @@ body {
   position: fixed;
   right: 5%;
   top: 80%;
+  -webkit-box-shadow: 0px 0px 21px 7px rgba(247, 0, 62, 1);
+  -moz-box-shadow: 0px 0px 21px 7px rgba(247, 0, 62, 1);
+  box-shadow: 0px 0px 21px 7px rgba(247, 0, 62, 1);
 }
 
 .chat-box {
